--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,10 +8,10 @@ import HeroIlust from "../../assets/pics/hero.svg";
   <div class="relative flex flex-col-reverse items-center md:flex-row" id="hero">
     <div class="row items-center py-5 md:w-6/12 ">
       <div class="text-left space-y-3" id="hero-text">
-        <h1 class="text-4xl font-bold leading-none md:text-5xl text-center md:text-left text-gray-900" id="hero-title">
+        <h1 class="text-4xl font-bold leading-none md:text-5xl text-center md:text-left text-gray-900 dark:text-white" id="hero-title">
           Construimos el <span class="text-blue-600">futuro digital</span> de tu negocio
         </h1>
-        <p class="mt-6 mb-8 text-lg text-gray-600 leading-relaxed text-center md:text-left md:pr-12" id="hero-description">
+        <p class="mt-6 mb-8 text-lg text-gray-600 dark:text-gray-300 leading-relaxed text-center md:text-left md:pr-12" id="hero-description">
           Desarrollamos páginas web, software a medida y experiencias digitales que impulsan tu crecimiento, optimizan procesos y conectan con todo el mundo.
         </p>
         <div class="w-full justify-center md:justify-start flex" id="hero-button">
