--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,7 +24,7 @@ const { ...props } = Astro.props;
     }
   </style>
   <script src="../utils/lenis"></script>
-  <body class="bg-white font-grotesk">
+  <body class="bg-white dark:bg-gray-900 font-grotesk">
     <main transition:name="main">
       <Navbar />
       <slot />
