--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -16,8 +16,8 @@ const allBlogArticles: CollectionEntry<'blog'>[] = (await getCollection('blog'))
 	<main class="space-y-20" id="articles-main">
             <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-3">
                 <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8" id="articles-header">
-                    <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold" id="articles-title">Our Blog</h2>
-                    <p class="font-light sm:text-xl" id="articles-description">We use an agile approach to test assumptions and connect with the needs of your audience early and often.</p>
+                    <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white" id="articles-title">Our Blog</h2>
+                    <p class="font-light sm:text-xl text-gray-600 dark:text-gray-300" id="articles-description">We use an agile approach to test assumptions and connect with the needs of your audience early and often.</p>
                 </div>
                 <br>
                 <div id="articles-search">
