--- a/src/components/sections/Cases.astro
+++ b/src/components/sections/Cases.astro
@@ -46,8 +46,8 @@ import SectionTitle from "../ui/SectionTitle.astro";
           <Card>
             <div class="flex p-[60px] h-full bg-dark text-gray rounded-[45px] m-[1px]">
               <div class="flex flex-col gap-5">
-                <h3 class="text-xl font-bold">{card.title}</h3>
-                <p class="text-gray-300">{card.description}</p>
+                <h3 class="text-xl font-bold text-white dark:text-black">{card.title}</h3>
+                <p class="text-gray-300 dark:text-gray-700">{card.description}</p>
                 <a href={card.link} class="flex items-center gap-[15px]">
                   <span class="text-green">Mas Info</span>
                   <picture>
