--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -8,10 +8,10 @@ import Card from "../components/ui/Card.astro";
 	<main class="space-y-20" id="pricing-main">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-3">
       <div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12" id="pricing-header">
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900" id="pricing-title">
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white" id="pricing-title">
           Planes diseñados para tu crecimiento tecnológico
         </h2>
-        <p class="mb-5 font-light text-gray-500 sm:text-xl" id="pricing-description">
+        <p class="mb-5 font-light text-gray-500 dark:text-gray-300 sm:text-xl" id="pricing-description">
           En Miracode, ofrecemos soluciones de desarrollo a medida con transparencia, soporte continuo y escalabilidad desde el primer día.
         </p>
       </div>
