--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -10,13 +10,13 @@ const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
 
 <Card isUnderline={true}>
   <div
-    class="h-[300px] w-full sm:h-full lg:gap-[60px] grid custom-grid lg:grid-cols-2 lg:grid-rows-1 p-8 sm:p-[50px] rounded-[45px] bg-gradient-to-br from-blue-100 to-blue-300"
+    class="h-[300px] w-full sm:h-full lg:gap-[60px] grid custom-grid lg:grid-cols-2 lg:grid-rows-1 p-8 sm:p-[50px] rounded-[45px] bg-gradient-to-br from-blue-100 to-blue-300 dark:from-gray-700 dark:to-gray-800"
   >
     <h3 class="flex flex-col col-span-2 lg:col-span-1 justify-center">
-      <span class="w-fit text-blue-800 font-bold text-2xl sm:text-3xl lg:text-4xl">
+      <span class="w-fit text-blue-800 dark:text-blue-200 font-bold text-2xl sm:text-3xl lg:text-4xl">
         {titleTop}
       </span>
-      <span class="w-fit text-blue-800 font-bold text-2xl sm:text-3xl lg:text-4xl mt-1">
+      <span class="w-fit text-blue-800 dark:text-blue-200 font-bold text-2xl sm:text-3xl lg:text-4xl mt-1">
         {titleBottom}
       </span>
     </h3>
@@ -32,7 +32,7 @@ const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
     <div class="flex items-end">
       <a href={link} class="flex items-center gap-3.5">
         <Image src={gob} alt={alt} />
-        <span class="hidden sm:block font-medium">Más Información</span>
+        <span class="hidden sm:block font-medium text-gray-700 dark:text-gray-200">Más Información</span>
       </a>
     </div>
   </div>
