--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,12 +3,13 @@ import Footer from "../components/ui/Footer.astro";
 import Navbar from "../components/ui/Navbar.astro";
 import MainHead from "./MainHead.astro";
 import "../styles/global.css";
-
+import {ViewTransitions} from "astro:transitions";
 const { ...props } = Astro.props;
 ---
 
 <html lang="en">
   <MainHead {...props} />
+  
   <style>
     html.lenis {
       height: auto;
@@ -22,8 +23,10 @@ const { ...props } = Astro.props;
     .lenis.lenis-stopped {
       overflow: hidden;
     }
+    
   </style>
   <script src="../utils/lenis"></script>
+  <ViewTransitions />
   <body class="bg-white dark:bg-gray-900 font-grotesk">
     <main transition:name="main">
       <Navbar />
