--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -2,6 +2,7 @@
 import { Astronav } from "astro-navbar";
 
 const menuitems = [
+  { href: '/', label: 'Inicio' },
   { href: '/about', label: 'Sobre nosotros' },
   { href: '/services', label: 'Servicios' },
   { href: '/pricing', label: 'Precios' },
