feat nuevos cambios

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -32,7 +32,7 @@ const socials = [
           <h3 class="mb-5 text-2xl text-green font-bold">Síguenos</h3>
           <ul class="flex flex-wrap justify-center gap-5">
             {socials.map((item) => (
-              <li key={item.name} class="footer-social-item flex flex-col items-center">
+              <li  class="footer-social-item flex flex-col items-center">
                 <a
                   href={item.link}
                   target="_blank"
